--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -1,233 +1,240 @@
 // vera panel
 #PORTAL_VERA_PANEL {
-  color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   z-index: 999;
+  pointer-events: none;
   display: flex;
   align-items: center;
-  gap: 15px;
-  position: fixed;
-  top: 35px;
-  right: 0;
-  min-width: 100px;
-  min-height: 200px;
-  max-height: 100vh;
-  overflow: visible;
+  justify-content: flex-end;
+  .panel {
+    pointer-events: all;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    min-width: 100px;
+    min-height: 200px;
+    max-height: 100vh;
+    overflow: visible;
 
-  padding: 12px;
-  border: none;
-  border-radius: var(--border-radius);
-  transition: all 0.5s ease-in-out;
-  transition-property: background, width, height;
-  background: var(--panel-bg-color);
-  // loading
-  @import (less) './common/loading.less';
-  // overwrite loading
-  .loading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
-  }
-  &[layout='min'] {
-    width: 260px;
-    min-height: 40px;
-    padding-top: 8px !important;
-    .cameras,
-    .invite,
-    .join {
-      display: none;
-    }
+    padding: 12px;
+    border-radius: var(--border-radius);
+    transition: all 0.5s ease-in-out;
+    transition-property: background, width, height;
     background: var(--panel-bg-color);
-    .close {
-      bottom: 8px;
+    // loading
+    @import (less) './common/loading.less';
+    // overwrite loading
+    .loading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate3d(-50%, -50%, 0);
     }
-    .close,
-    .topbar,
-    &[data-status]:after {
-      visibility: visible;
+    &[layout='min'] {
+      width: 260px;
+      min-height: 40px;
+      padding-top: 8px !important;
+      .cameras,
+      .invite,
+      .join {
+        display: none;
+      }
+      background: var(--panel-bg-color);
+      .close {
+        bottom: 8px;
+      }
+      .close,
+      .topbar,
+      &[data-status]:after {
+        visibility: visible;
+      }
     }
-  }
-  &[layout='vt'] {
-    flex-direction: column;
-    .cameras {
+    &[layout='vt'] {
       flex-direction: column;
+      .cameras {
+        flex-direction: column;
+      }
     }
-  }
-  &[layout='hz'] {
-    flex-direction: row;
-  }
-  &[layout='one'] {
-    gap: 0;
-    .cameras .camera.local {
-      display: none;
+    &[layout='hz'] {
+      flex-direction: row;
     }
-  }
-  // &.host {
-  //   // border-color: khaki;
-  // }
-  &:hover {
-    background: var(--panel-bg-color);
-    &[data-status]:after {
-      visibility: visible;
+    &[layout='one'] {
+      gap: 0;
+      .cameras .camera.local {
+        display: none;
+      }
     }
-    .close {
-      visibility: visible;
-    }
-  }
-  &[data-status]:after {
-    content: '';
-    position: absolute;
-    left: -15px;
-    top: 0;
-    visibility: hidden;
-    width: 10px;
-    height: 10px;
-    background-color: #999;
-    border-radius: 50%;
-  }
-  &[data-status='uninitialized'] {
-    width: 440px;
-    height: 224px;
-  }
-  // &[data-status='initialized'] {
-  //   background-color: #ee7f3d;
-  // }
-  &[data-status='open']:after {
-    background-color: #ee7f3d;
-  }
-  &[data-status='close']:after {
-    background-color: #fff;
-  }
-  &[data-status='disconnected']:after {
-    background-color: #ccc;
-  }
-  &[data-status='connected']:after {
-    background-color: #48baff;
-  }
-  &[data-status='streaming'] {
-    background: transparent;
-    &:after {
-      background-color: #48ba2b;
-    }
-  }
-
-  &[data-status='streaming'] {
-    padding-top: 40px;
+    // &.host {
+    //   // border-color: khaki;
+    // }
     &:hover {
       background: var(--panel-bg-color);
-      .topbar {
-        display: flex;
+      &[data-status]:after {
+        visibility: visible;
+      }
+      .close {
+        visibility: visible;
       }
     }
-  }
-  &[data-status='connected'] {
+    &[data-status]:after {
+      content: '';
+      position: absolute;
+      left: -15px;
+      top: 0;
+      visibility: hidden;
+      width: 10px;
+      height: 10px;
+      background-color: #999;
+      border-radius: 50%;
+    }
+    &[data-status='uninitialized'] {
+      width: 440px;
+      height: 224px;
+    }
+    // &[data-status='initialized'] {
+    //   background-color: #ee7f3d;
+    // }
+    &[data-status='open']:after {
+      background-color: #ee7f3d;
+    }
+    &[data-status='close']:after {
+      background-color: #fff;
+    }
+    &[data-status='disconnected']:after {
+      background-color: #ccc;
+    }
+    &[data-status='connected']:after {
+      background-color: #48baff;
+    }
+    &[data-status='streaming'] {
+      background: transparent;
+      &:after {
+        background-color: #48ba2b;
+      }
+    }
+
+    &[data-status='streaming'] {
+      padding-top: 40px;
+      &:hover {
+        background: var(--panel-bg-color);
+        .topbar {
+          display: flex;
+        }
+      }
+    }
+    &[data-status='connected'] {
+      .topbar {
+        display: none;
+      }
+    }
+    &[data-status='error']:after {
+      background-color: #d7322d;
+    }
+    > .close {
+      visibility: hidden;
+      display: block;
+      cursor: pointer;
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      z-index: 999;
+      transform: translateX(-50%);
+      width: 40px;
+      height: 40px;
+      opacity: 0.8;
+      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/tel.svg');
+      background-size: cover;
+      &:hover {
+        opacity: 1;
+      }
+    }
+    // .drag {
+    //   // .drag();
+    //   position: absolute;
+    //   bottom: 12px;
+    //   left: -30px;
+    //   width: 20px;
+    //   height: 20px;
+    //   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/drag.svg');
+    // }
     .topbar {
       display: none;
-    }
-  }
-  &[data-status='error']:after {
-    background-color: #d7322d;
-  }
-  > .close {
-    visibility: hidden;
-    display: block;
-    cursor: pointer;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    z-index: 999;
-    transform: translateX(-50%);
-    width: 40px;
-    height: 40px;
-    opacity: 0.8;
-    background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/tel.svg');
-    background-size: cover;
-    &:hover {
-      opacity: 1;
-    }
-  }
-  // .drag {
-  //   // .drag();
-  //   position: absolute;
-  //   bottom: 12px;
-  //   left: -30px;
-  //   width: 20px;
-  //   height: 20px;
-  //   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/drag.svg');
-  // }
-  .topbar {
-    display: none;
-    position: absolute;
-    top: 10px;
-    left: 0;
-    justify-content: space-between;
-    width: -webkit-fill-available;
-    padding: 0 12px;
-    .add {
-      cursor: pointer;
-      width: 40px;
-      height: 18px;
-      padding: 2px;
-      border-radius: var(--border-radius);
-      background-color: var(--button-bg-color);
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/invite.svg');
-      background-position: center;
-      background-size: 14px;
-    }
-    .layout {
-      display: flex;
-      align-items: center;
-      border-radius: var(--border-radius);
-      background-color: var(--button-bg-color);
-      padding: 4px;
-      gap: 10px;
-      .item {
-        position: relative;
+      position: absolute;
+      top: 10px;
+      left: 0;
+      justify-content: space-between;
+      width: -webkit-fill-available;
+      padding: 0 12px;
+      .add {
         cursor: pointer;
+        width: 40px;
+        height: 18px;
+        padding: 2px;
+        border-radius: var(--border-radius);
+        background-color: var(--button-bg-color);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/invite.svg');
+        background-position: center;
+        background-size: 14px;
+      }
+      .layout {
         display: flex;
-        justify-content: center;
         align-items: center;
-        gap: 1px;
-        width: 15px;
-        height: 15px;
-        &:after {
-          position: absolute;
-          content: '';
-          display: block;
-          width: 100%;
-          height: 100%;
-          opacity: 0;
-        }
-        &:hover,
-        &.curr {
-          background-color: var(--camera-bg-color);
-        }
-        &.vt {
-          flex-direction: column;
-        }
-        .mock {
-          border-radius: 1px;
-          width: 4px;
-          background: var(--font-color);
-          &.box {
-            height: 4px;
+        border-radius: var(--border-radius);
+        background-color: var(--button-bg-color);
+        padding: 4px;
+        gap: 10px;
+        .item {
+          position: relative;
+          cursor: pointer;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 1px;
+          width: 15px;
+          height: 15px;
+          &:after {
+            position: absolute;
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
           }
-          &.line {
-            height: 2px;
+          &:hover,
+          &.curr {
+            background-color: var(--camera-bg-color);
+          }
+          &.vt {
+            flex-direction: column;
+          }
+          .mock {
+            border-radius: 1px;
+            width: 4px;
+            background: var(--font-color);
+            &.box {
+              height: 4px;
+            }
+            &.line {
+              height: 2px;
+            }
           }
         }
       }
     }
-  }
 
-  .cameras {
-    overflow: hidden;
-    display: flex;
-    gap: 15px;
-    @import './camera.less';
+    .cameras {
+      overflow: hidden;
+      display: flex;
+      gap: 15px;
+      @import './camera.less';
+    }
+    @import './invite.less';
+    @import './join.less';
   }
-  @import './invite.less';
-  @import './join.less';
 }
