chore: remove vera widget username

--- a/public/crx/vera/style/widget.less
+++ b/public/crx/vera/style/widget.less
@@ -21,39 +21,26 @@
     align-items: center;
     justify-content: center;
     .drag {
-      margin-left: -22px;
-      width: 60px;
+      margin-left: -25px;
+      width: 50px;
       height: 50px;
       background-color: var(--widget-bg-color);
       border-top-right-radius: 50%;
       border-bottom-right-radius: 50%;
-      padding: 5px 5px 5px 0;
+      padding: 0;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-evenly;
       transition: margin-left 0.5s ease-in-out;
       will-change: margin-left;
       > .portal_logo {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
         background-color: transparent;
         background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/logo.png');
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-      }
-      > .username {
-        white-space: nowrap;
-        position: absolute;
-        bottom: -20px;
-        left: 20px;
-        border-radius: 5px;
-        font-size: 10px;
-        border: 1px solid #eee;
-        background-color: #333;
-        color: #fff;
-        padding: 2px 5px;
-        line-height: 1.1;
       }
       > .handle {
         border-radius: 4px;
@@ -73,8 +60,8 @@
       cursor: pointer;
       visibility: hidden;
       content: '';
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
       background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/video.svg');
       background-size: contain;
       background-repeat: no-repeat;
