--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -134,33 +134,7 @@
     &[data-status='error']:after {
       background-color: #d7322d;
     }
-    > .close {
-      visibility: hidden;
-      display: block;
-      cursor: pointer;
-      position: absolute;
-      bottom: 10px;
-      left: 50%;
-      z-index: 999;
-      transform: translateX(-50%);
-      width: 40px;
-      height: 40px;
-      opacity: 0.8;
-      background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/tel.svg');
-      background-size: cover;
-      &:hover {
-        opacity: 1;
-      }
-    }
-    // .drag {
-    //   // .drag();
-    //   position: absolute;
-    //   bottom: 12px;
-    //   left: -30px;
-    //   width: 20px;
-    //   height: 20px;
-    //   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/drag.svg');
-    // }
+
     .topbar {
       display: none;
       position: absolute;
@@ -169,18 +143,17 @@
       justify-content: space-between;
       width: -webkit-fill-available;
       padding: 0 12px;
-      .add {
+      .close {
         cursor: pointer;
         width: 40px;
         height: 18px;
         padding: 2px;
-        border-radius: var(--border-radius);
-        background-color: var(--button-bg-color);
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/invite.svg');
+        background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/tel.svg');
+        background-size: 50%;
         background-position: center;
-        background-size: 14px;
+        background-repeat: no-repeat;
+        background-color: #eb2027;
+        border-radius: var(--border-radius);
       }
       .layout {
         display: flex;
