--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -21,6 +21,7 @@
     overflow: visible;
 
     padding: 12px;
+    padding-top: 40px;
     border-radius: var(--border-radius);
     transition: all 0.5s ease-in-out;
     transition-property: background, width, height;
@@ -118,17 +119,15 @@
     }
 
     &[data-status='streaming'] {
-      padding-top: 40px;
+      // padding-top: 40px;
+      .topbar {
+        visibility: hidden;
+      }
       &:hover {
         background: var(--panel-bg-color);
         .topbar {
-          display: flex;
+          visibility: visible;
         }
-      }
-    }
-    &[data-status='connected'] {
-      .topbar {
-        display: none;
       }
     }
     &[data-status='error']:after {
@@ -136,7 +135,7 @@
     }
 
     .topbar {
-      display: none;
+      display: flex;
       position: absolute;
       top: 10px;
       left: 0;
