--- a/public/crx/vera/style/join.css
+++ b/public/crx/vera/style/join.css
@@ -14,6 +14,11 @@
 .join .btn {
   font-size: 22px;
 }
+.join .login {
+  margin-top: 15px;
+  padding: 10px 20px;
+  background-color: #c4c4c4;
+}
 .join .username {
   margin-bottom: 20px;
   min-width: 120px;
