--- a/public/crx/vera/style/join.less
+++ b/public/crx/vera/style/join.less
@@ -14,6 +14,11 @@
     // .btn();
     font-size: 22px;
   }
+  .login {
+    margin-top: 15px;
+    padding: 10px 20px;
+    background-color: #c4c4c4;
+  }
   .username {
     margin-bottom: 20px;
     min-width: 120px;
