feat: add feedback

--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -439,7 +439,22 @@ table {
   background-color: #eb2027;
   border-radius: var(--border-radius);
 }
-#PORTAL_VERA_PANEL .panel .topbar .layout {
+#PORTAL_VERA_PANEL .panel .topbar .right {
+  display: flex;
+  align-items: center;
+}
+#PORTAL_VERA_PANEL .panel .topbar .right .feedback {
+  width: 22px;
+  height: 22px;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/feedback.svg');
+  background-size: 80%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: var(--border-radius);
+  background-color: var(--button-bg-color);
+  margin-right: 5px;
+}
+#PORTAL_VERA_PANEL .panel .topbar .right .layout {
   display: flex;
   align-items: center;
   border-radius: var(--border-radius);
@@ -447,7 +462,7 @@ table {
   padding: 4px;
   gap: 10px;
 }
-#PORTAL_VERA_PANEL .panel .topbar .layout .item {
+#PORTAL_VERA_PANEL .panel .topbar .right .layout .item {
   position: relative;
   cursor: pointer;
   display: flex;
@@ -457,7 +472,7 @@ table {
   width: 15px;
   height: 15px;
 }
-#PORTAL_VERA_PANEL .panel .topbar .layout .item:after {
+#PORTAL_VERA_PANEL .panel .topbar .right .layout .item:after {
   position: absolute;
   content: '';
   display: block;
@@ -465,22 +480,22 @@ table {
   height: 100%;
   opacity: 0;
 }
-#PORTAL_VERA_PANEL .panel .topbar .layout .item:hover,
-#PORTAL_VERA_PANEL .panel .topbar .layout .item.curr {
+#PORTAL_VERA_PANEL .panel .topbar .right .layout .item:hover,
+#PORTAL_VERA_PANEL .panel .topbar .right .layout .item.curr {
   background-color: var(--camera-bg-color);
 }
-#PORTAL_VERA_PANEL .panel .topbar .layout .item.vt {
+#PORTAL_VERA_PANEL .panel .topbar .right .layout .item.vt {
   flex-direction: column;
 }
-#PORTAL_VERA_PANEL .panel .topbar .layout .item .mock {
+#PORTAL_VERA_PANEL .panel .topbar .right .layout .item .mock {
   border-radius: 1px;
   width: 4px;
   background: var(--font-color);
 }
-#PORTAL_VERA_PANEL .panel .topbar .layout .item .mock.box {
+#PORTAL_VERA_PANEL .panel .topbar .right .layout .item .mock.box {
   height: 4px;
 }
-#PORTAL_VERA_PANEL .panel .topbar .layout .item .mock.line {
+#PORTAL_VERA_PANEL .panel .topbar .right .layout .item .mock.line {
   height: 2px;
 }
 #PORTAL_VERA_PANEL .panel .cameras {
