--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -153,46 +153,62 @@
         background-color: #eb2027;
         border-radius: var(--border-radius);
       }
-      .layout {
+      .right {
         display: flex;
         align-items: center;
-        border-radius: var(--border-radius);
-        background-color: var(--button-bg-color);
-        padding: 4px;
-        gap: 10px;
-        .item {
-          position: relative;
-          cursor: pointer;
+        .feedback {
+          width: 22px;
+          height: 22px;
+          background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/feedback.svg');
+          background-size: 80%;
+          background-position: center;
+          background-repeat: no-repeat;
+          border-radius: var(--border-radius);
+          background-color: var(--button-bg-color);
+          margin-right: 5px;
+        }
+
+        .layout {
           display: flex;
-          justify-content: center;
           align-items: center;
-          gap: 1px;
-          width: 15px;
-          height: 15px;
-          &:after {
-            position: absolute;
-            content: '';
-            display: block;
-            width: 100%;
-            height: 100%;
-            opacity: 0;
-          }
-          &:hover,
-          &.curr {
-            background-color: var(--camera-bg-color);
-          }
-          &.vt {
-            flex-direction: column;
-          }
-          .mock {
-            border-radius: 1px;
-            width: 4px;
-            background: var(--font-color);
-            &.box {
-              height: 4px;
+          border-radius: var(--border-radius);
+          background-color: var(--button-bg-color);
+          padding: 4px;
+          gap: 10px;
+          .item {
+            position: relative;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1px;
+            width: 15px;
+            height: 15px;
+            &:after {
+              position: absolute;
+              content: '';
+              display: block;
+              width: 100%;
+              height: 100%;
+              opacity: 0;
             }
-            &.line {
-              height: 2px;
+            &:hover,
+            &.curr {
+              background-color: var(--camera-bg-color);
+            }
+            &.vt {
+              flex-direction: column;
+            }
+            .mock {
+              border-radius: 1px;
+              width: 4px;
+              background: var(--font-color);
+              &.box {
+                height: 4px;
+              }
+              &.line {
+                height: 2px;
+              }
             }
           }
         }
