--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -444,6 +444,10 @@ table {
   align-items: center;
 }
 #PORTAL_VERA_PANEL .panel .topbar .right .feedback {
+  padding: 0;
+  margin: 0;
+  margin-right: 5px;
+  border: none;
   width: 22px;
   height: 22px;
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/feedback.svg');
@@ -452,7 +456,6 @@ table {
   background-repeat: no-repeat;
   border-radius: var(--border-radius);
   background-color: var(--button-bg-color);
-  margin-right: 5px;
 }
 #PORTAL_VERA_PANEL .panel .topbar .right .layout {
   display: flex;
@@ -721,6 +724,8 @@ table {
   overflow: hidden;
 }
 #PORTAL_VERA_PANEL .panel .invite .users {
+  height: fit-content;
+  overflow: scroll;
   width: -webkit-fill-available;
   display: flex;
   flex-direction: column;
@@ -728,6 +733,15 @@ table {
   background-color: #1f1f1f;
   padding: 6px 4px;
   border-radius: var(--border-radius);
+  color: var(--font-color);
+  /* Track */
+}
+#PORTAL_VERA_PANEL .panel .invite .users::-webkit-scrollbar {
+  /* visibility: hidden; */
+  display: none;
+}
+#PORTAL_VERA_PANEL .panel .invite .users::-webkit-scrollbar-track {
+  background: transparent;
 }
 #PORTAL_VERA_PANEL .panel .invite .users .user {
   display: flex;
@@ -744,6 +758,7 @@ table {
   border-radius: 50%;
 }
 #PORTAL_VERA_PANEL .panel .invite .users .user .name {
+  color: inherit;
   font-size: 10px;
 }
 #PORTAL_VERA_PANEL .panel .invite .login {
@@ -782,4 +797,50 @@ table {
   color: var(--font-color);
   border-radius: var(--border-radius);
   background-color: var(--button-bg-color);
+}
+#VERA_CURSOR {
+  z-index: 99999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  will-change: transform;
+}
+#VERA_CURSOR .circle {
+  border-radius: 50%;
+  background-color: deepskyblue;
+  position: absolute;
+  left: -50%;
+  top: -50%;
+  width: 40px;
+  height: 40px;
+  opacity: 0;
+}
+#VERA_CURSOR.clicked .circle {
+  animation: scaleIn 0.5s cubic-bezier(0.36, 0.11, 0.89, 0.32);
+}
+#VERA_CURSOR .pointer {
+  width: 20px;
+  height: 20px;
+  background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/cursor.svg');
+  background-size: contain;
+  filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.8));
+}
+#VERA_CURSOR .name {
+  margin-top: 5px;
+  font-size: 10px;
+  color: #333;
+  padding: 4px 6px;
+  background-color: #f4ea2a;
+}
+@keyframes scaleIn {
+  from {
+    transform: scale(0.5, 0.5);
+    opacity: 0.5;
+  }
+  to {
+    transform: scale(2.5, 2.5);
+    opacity: 0;
+  }
 }
