--- a/public/crx/vera/style/panel.css
+++ b/public/crx/vera/style/panel.css
@@ -197,6 +197,10 @@
   align-items: center;
 }
 #PORTAL_VERA_PANEL .panel .topbar .right .feedback {
+  padding: 0;
+  margin: 0;
+  margin-right: 5px;
+  border: none;
   width: 22px;
   height: 22px;
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/feedback.svg');
@@ -205,7 +209,6 @@
   background-repeat: no-repeat;
   border-radius: var(--border-radius);
   background-color: var(--button-bg-color);
-  margin-right: 5px;
 }
 #PORTAL_VERA_PANEL .panel .topbar .right .layout {
   display: flex;
