--- a/public/crx/vera/style/panel.less
+++ b/public/crx/vera/style/panel.less
@@ -157,6 +157,10 @@
         display: flex;
         align-items: center;
         .feedback {
+          padding: 0;
+          margin: 0;
+          margin-right: 5px;
+          border: none;
           width: 22px;
           height: 22px;
           background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/feedback.svg');
@@ -165,7 +169,6 @@
           background-repeat: no-repeat;
           border-radius: var(--border-radius);
           background-color: var(--button-bg-color);
-          margin-right: 5px;
         }
 
         .layout {
