--- a/public/crx/vera/style/join.less
+++ b/public/crx/vera/style/join.less
@@ -3,7 +3,7 @@
   height: 200px;
   width: 200px;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: center;
   gap: 10px;
   justify-content: center;
