--- a/public/crx/vera/style.css
+++ b/public/crx/vera/style.css
@@ -771,7 +771,7 @@ table {
   height: 200px;
   width: 200px;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: center;
   gap: 10px;
   justify-content: center;
@@ -800,7 +800,7 @@ table {
 }
 #VERA_CURSOR {
   z-index: 99999;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   display: flex;
@@ -821,8 +821,8 @@ table {
   animation: scaleIn 0.5s cubic-bezier(0.36, 0.11, 0.89, 0.32);
 }
 #VERA_CURSOR .pointer {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   background-image: url('chrome-extension://__MSG_@@extension_id__/crx/vera/assets/icon/cursor.svg');
   background-size: contain;
   filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.8));
